# polling

./: .gitignore  CMakeLists.txt  prj.conf
boards/: nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.overlay  nrf54l15dk_nrf54l15_cpuapp_ns.overlay
modules/zephyr/zephyr-st25r/zephyr/src/: platform.h
modules/zephyr/zephyr-st25r/zephyr/st/rfal/Doc/: Release_Notes.html
modules/zephyr/zephyr-st25r/zephyr/st/st25r3916/: Release_Notes.html
src/: analogConfigTbl_NFC08A1.c  bluetooth_manager.c  ce.c  demo.h  demo_polling.c  main.c
