#-------------------------------------------------------------------------------
# Zephyr Example Application
#
# Copyright (c) 2021 Nordic Semiconductor ASA
# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.21)

# STEP 8.1 Add external module
list(APPEND EXTRA_ZEPHYR_MODULES
  ${CMAKE_CURRENT_SOURCE_DIR}/modules/zephyr/zephyr-st25r
)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})

project(app LANGUAGES C)


target_sources(app PRIVATE
    src/analogConfigTbl_NFC08A1.c
    src/demo_ce.c
    src/demo_polling.c
    src/main.c
    )